# tidal_cosmozoom

./: .gitignore  CMakeLists.txt  Makefile  Tij_evolution_plotting.py  field_to_vtk.py  flake.nix  main.cpp  params.cpp  params.hh  params.txt  vars.hh
src/: arrays.cpp  arrays.hh  cosmology.cpp  cosmology.hh  fft.cpp  fft.hh  gravity.cpp  gravity.hh  io.cpp  io.hh  main.cpp  params.cpp  params.hh  random.cpp  random.hh  tidal.cpp  tidal.hh  vars.hh  write.cpp  write.hh
